[gd_scene load_steps=5 format=3 uid="uid://dou5rxf8tiklv"]

[ext_resource type="Script" path="res://scripts/Items/slots/inventory_bar.gd" id="1_squjk"]
[ext_resource type="PackedScene" uid="uid://bd7u1ih5ksmhm" path="res://scenes/GUIParts/inventory_bar_slot.tscn" id="2_j0bpj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7cj6"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5u4s"]
size = Vector2(14, 13)

[node name="inventoryBar" type="Node2D"]
script = ExtResource("1_squjk")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-33, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-0.00913239, 0.494567)
shape = SubResource("RectangleShape2D_j7cj6")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(33, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.032135, 0.487299)
shape = SubResource("RectangleShape2D_q5u4s")

[node name="inventoryBarSlot" parent="." instance=ExtResource("2_j0bpj")]
position = Vector2(33, 0)

[node name="inventoryBarSlot2" parent="." instance=ExtResource("2_j0bpj")]
position = Vector2(-33, 0)

[connection signal="mouse_entered" from="Area2D2" to="." method="_on_area_2d_2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_area_2d_2_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
